<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_nav"
    app:startDestination="@+id/navigation_beranda">

    <fragment
        android:id="@+id/navigation_beranda"
        android:name="com.dicoding.sewagrafi.ui.beranda.BerandaFragment"
        android:label="@string/title_beranda"
        tools:layout="@layout/fragment_beranda" />

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.dicoding.sewagrafi.ui.favorite.FavoriteFragment"
        android:label="@string/title_favorite"
        tools:layout="@layout/fragment_favorite" />

    <fragment
        android:id="@+id/navigation_pemesanan"
        android:name="com.dicoding.sewagrafi.ui.pemesanan.PemesananFragment"
        android:label="@string/title_pemesanan"
        tools:layout="@layout/fragment_pemesanan" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.dicoding.sewagrafi.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>