<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    card_view:cardElevation="5dp"
    card_view:cardCornerRadius="8dp"
    card_view:cardPreventCornerOverlap="true"
    card_view:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_marginStart="8dp">

        <ImageView
            android:id="@+id/img_kamera"
            android:layout_width="170dp"
            android:layout_height="120dp"
            android:contentDescription="@string/gambar_kamera"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_nama_kamera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/img_kamera"
            android:layout_marginTop="8dp"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            tools:text="@string/nama_kamera" />

        <TextView
            android:id="@+id/tv_jenis_kamera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_nama_kamera"
            android:textSize="12sp"
            android:textColor="@color/black"
            tools:text="@string/jenis_kamera" />

        <TextView
            android:id="@+id/tv_harga_sewa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_jenis_kamera"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:textStyle="bold|italic"
            tools:text="@string/harga_sewa" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>