<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/cvButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/img_kamera"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/gambar_kamera"
                    android:scaleType="fitXY"
                    tools:src="@tools:sample/avatars" />
            </FrameLayout>

            <TextView
                android:id="@+id/tv_nama_kamera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:textColor="@color/black"
                android:textSize="36sp"
                android:textStyle="bold"
                tools:text="@string/nama_kamera" />

            <TextView
                android:id="@+id/tv_jenis_kamera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                android:textColor="@color/black"
                android:textSize="16sp"
                tools:text="@string/jenis_kamera" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@color/underLine"
                android:visibility="visible" />

            <TextView
                android:id="@+id/tv_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold|italic"
                tools:text="Status" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@color/underLine"
                android:visibility="visible" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/spesifikasi_detail"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_spesifikasi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/harga_sewa"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_harga_sewa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold|italic" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>



    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnBook"
                android:layout_width="220dp"
                android:layout_height="52dp"
                android:layout_marginStart="28dp"
                android:text="@string/book"
                android:textSize="16sp"/>

            <ImageButton
                android:id="@+id/btnMessage"
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:layout_marginTop="6dp"
                android:layout_marginStart="16dp"
                android:background="@drawable/roundedcorner"
                android:backgroundTint="@color/bluegrey_500"
                android:src="@drawable/ic_baseline_email_24" />

            <ImageButton
                android:id="@+id/btnFavorite"
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:layout_marginTop="6dp"
                android:layout_marginStart="16dp"
                android:background="@drawable/roundedcorner"
                android:backgroundTint="@color/bluegrey_500"
                android:src="@drawable/favorite_button" />
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>



</androidx.constraintlayout.widget.ConstraintLayout>
