<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <Button
        android:id="@+id/backToMain"
        android:layout_width="60dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:background="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/img_kamera"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/gambar_kamera"
                    android:scaleType="fitXY"
                    tools:src="@tools:sample/avatars" />

                <ToggleButton
                    android:id="@+id/btn_favorite"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="20dp"
                    android:layout_gravity="end"
                    android:background="@drawable/favorite_toggle"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:textOff=""
                    android:textOn="" />
            </FrameLayout>

            <TextView
                android:id="@+id/tv_nama_kamera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:textColor="@color/black"
                android:textSize="36sp"
                android:textStyle="bold"
                tools:text="@string/nama_kamera" />

            <TextView
                android:id="@+id/tv_jenis_kamera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                android:textColor="@color/black"
                android:textSize="16sp"
                tools:text="@string/jenis_kamera" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@color/underLine"
                android:visibility="visible" />

            <TextView
                android:id="@+id/tv_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                android:background="@color/bluegrey_200"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold|italic"
                tools:text="Status" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@color/underLine"
                android:visibility="visible" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/spesifikasi_detail"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_spesifikasi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@color/underLine"
                android:visibility="visible" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/harga_sewa"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_harga_sewa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold|italic" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@color/underLine"
                android:visibility="visible" />

            <LinearLayout
                android:id="@+id/linear_book"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tanggal_pinjam"
                        android:textColor="@color/black"
                        android:textStyle="bold|italic" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">
                        <ImageButton
                            android:id="@+id/btn_tanggal_pinjam"
                            style="@style/Base.Widget.AppCompat.ImageButton"
                            android:layout_width="50dp"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_baseline_date_range_24"
                            android:contentDescription="@string/tanggal_pinjam" />

                        <TextView
                            android:id="@+id/tv_tanggal_pinjam"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="16dp"
                            android:text="@string/tanggal_pinjam" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">
                        <ImageButton
                            android:id="@+id/btn_jam_pinjam"
                            android:layout_width="50dp"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_baseline_access_time_24" />
                        <TextView
                            android:id="@+id/tv_jam_pinjam"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/jam_pinjam" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textStyle="bold|italic"
                        android:text="@string/tanggal_kembali"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">
                        <ImageButton
                            android:id="@+id/btn_tanggal_kembali"
                            style="@style/Base.Widget.AppCompat.ImageButton"
                            android:layout_width="50dp"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_baseline_date_range_24"
                            android:contentDescription="@string/tanggal_kembali" />

                        <TextView
                            android:id="@+id/tv_tanggal_kembali"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tanggal_kembali" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">
                        <ImageButton
                            android:id="@+id/btn_jam_kembali"
                            android:layout_width="50dp"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_baseline_access_time_24" />
                        <TextView
                            android:id="@+id/tv_jam_kembali"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/jam_kembali" />
                    </LinearLayout>


                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/btn_book"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/book" />
        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
